--- a/untitled/src/sample/NodeLink.fxml
+++ b/untitled/src/sample/NodeLink.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.CubicCurve?>
 
-<fx:root type="Pane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.NodeLink">
+<fx:root type="Pane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" >
     <children>
         <CubicCurve fx:id="node_link" controlX2="50.0" controlY1="10.0" endX="10.0" fill="TRANSPARENT" stroke="BLACK" />
     </children>
