--- a/untitled/src/sample/style.css
+++ b/untitled/src/sample/style.css
@@ -25,5 +25,20 @@
 
 .icon-blue {
 	-fx-background-color: rgb(80,200,240);
+    	-fx-background-radius: 0 0 10 10;
+}
+
+.icon-red {
+    -fx-background-color: rgb(200,0,0);
+	-fx-background-radius: 0 0 10 10;
+}
+
+.icon-green {
+    -fx-background-color: rgb(0,200,0);
+	-fx-background-radius: 0 0 10 10;
+}
+
+.icon-purple {
+    -fx-background-color: rgb(0,200,0);
 	-fx-background-radius: 0 0 10 10;
 }
