--- a/untitled/src/xmlProject/DraggableNode.fxml
+++ b/untitled/src/xmlProject/DraggableNode.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<fx:root fx:id="dragableNode" prefHeight="51.0" prefWidth="90.0" styleClass="dragicon" stylesheets="@style.css" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="draggableNode" prefHeight="51.0" prefWidth="90.0" styleClass="dragicon" stylesheets="@style.css" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="50.0" prefWidth="90.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <GridPane fx:id="gridPane" prefHeight="30.0" prefWidth="80.0" styleClass="node-overlay">
