--- a/untitled/src/xmlProject/DraggableNode.fxml
+++ b/untitled/src/xmlProject/DraggableNode.fxml
@@ -35,7 +35,7 @@
          </GridPane>
          <HBox fx:id="hBox" prefHeight="21.0" prefWidth="90.0" styleClass="icon-blue">
             <children>
-               <AnchorPane fx:id="leftDragPane" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="15.0" styleClass="left-link-handle" />
+               <AnchorPane fx:id="leftDragPane" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="15.0" styleClass="left-link-handle" visible="false" />
                <AnchorPane fx:id="contentPane" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="60.0" />
                <AnchorPane fx:id="rightDragPane" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="15.0" styleClass="right-link-handle" />
             </children>
